--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,8 +1,8 @@
-home = d:\software\anaconda
+home = c:\users\sakib\appdata\local\programs\python\python37
 implementation = CPython
-version_info = 3.8.3.final.0
+version_info = 3.7.7.final.0
 virtualenv = 20.2.1
 include-system-site-packages = false
-base-prefix = d:\software\anaconda
-base-exec-prefix = d:\software\anaconda
-base-executable = d:\software\anaconda\python.exe
+base-prefix = c:\users\sakib\appdata\local\programs\python\python37
+base-exec-prefix = c:\users\sakib\appdata\local\programs\python\python37
+base-executable = c:\users\sakib\appdata\local\programs\python\python37\python.exe
