fixed the padas and joblib import issue just by installing theme in the APIProject folder fixed the padas and joblib import issue just by installing theme in the APIProject folde

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
-    //"python.linting.pylintPath": "D:\\Project\\Production\\DockerDjangoML\\env\\Scripts\\pylint.exe",
-    "python.linting.pylintPath" : "D:\\Project\\Production\\DockerDjangoML\\env\\Lib\\site-packages\\pylint",
-    "python.pythonPath": "D:\\Project\\Production\\DockerDjangoML\\env\\Scripts\\python.exe",
+    "python.linting.pylintPath": "D:\\Project\\Production\\DockerDjangoML\\env\\Scripts\\pylint.exe",
+    "python.pythonPath": "env\\Scripts\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
         
